# initRouter/articleRouter.go
@@ -2,6 +2,7 @@ package initRouter
 
 import (
 	"GinHello/handler/article"
+	"GinHello/middleware"
 )
 
 // ArticleRouter 文章路由
@@ -10,7 +11,7 @@ func ArticleRouter() {
 	{
 		articleGroup.GET("/:id", article.GetOne)
 		articleGroup.POST("/", article.Insert)
-		articleGroup.GET("/", article.GetAll)
+		articleGroup.GET("/", middleware.Auth(), article.GetAll)
 		articleGroup.DELETE("/:id", article.DeleteOne)
 		articleGroup.PUT("/", article.Update)
 	}
