# initRouter/userRouter.go
@@ -1,0 +1,11 @@
+package initRouter
+
+import "GinHello/handler/user"
+
+func UserRouter() {
+	userGroup := router.Group("/user")
+	{
+		userGroup.POST("/register", user.Register)
+		userGroup.POST("/login", user.CreateJwt)
+	}
+}
